hphp/hack/test/typecheck/fc_enum_case_3.php.rust_elab.exp
File "fc_enum_case_3.php", line 11, characters 11-12:
`switch` statement nonexhaustive; the following cases are missing: `BAR`, `BAZ` (Typing[4019])
  File "fc_enum_case_3.php", line 3, characters 6-8:
  Enum declared here
